# hs_analysis

./: .env.example  .gitignore  FEATURE_GAPS.md  HSReplay_Card_Rankings.xlsx  PROGRESS.md  README.md  deck_codes.txt  hearthstone_enums.json  pyproject.toml  run_live.cmd  项目进度.md
.opencode/: CONVENTIONS.md  agent.md
analysis/: __init__.py  config.py
cfg/: live.cfg
docs/: refactoring_plan.md
hs_analysis/: config.py
hs_cards/: all_standard_legendaries.json  card_list.json  card_pool_analysis.md  card_turn_data.json  effect_analysis_report.md  full_classification_report.md  hsjson_standard.json  hsjson_standard_compact.json  iyingdi_all_normalized.json  iyingdi_all_standard.json  iyingdi_standard.json  iyingdi_standard_all.json  iyingdi_standard_compact.json  iyingdi_standard_full.json  iyingdi_standard_raw.json  iyingdi_type0.json  l6_scoring_report.json  legendaries_simple_v2.json  mechanics_detail_analysis.md  missing_standard_cards.md  parsed_decks.json  pool_quality_report.json  standard_complete.json  standard_legendaries_analysis.json  standard_legendaries_v2.json  unified_standard.json  unified_wild.json  v2_curve_params.json  v2_keyword_params.json  v2_scoring_report.json
logs/: .gitignore
research/: hearthstone_ai_research.md
scripts/: analyze_card_effects.py  analyze_card_pool.py  analyze_cards.py  analyze_gaps.py  analyze_meta_decks.py  analyze_specific_mechanics.py  analyze_turn8.py  bayesian_opponent.py  build_hsjson_standard.py  build_unified_db.py  check_avm.py  check_missing_cards.py  check_rarity.py  classify_all_cards.py  decode_deck.py  (+51 more)
(+580 files in other folders)
